Commit from TeleportHQ

--- a/index.css
+++ b/index.css
@@ -619,11 +619,23 @@
     right: -77px;
     width: 317px;
     bottom: 97px;
+    animation-name: slideInRight;
+    animation-delay: 0s;
+    animation-duration: 2s;
+    animation-direction: normal;
+    animation-iteration-count: 1;
+    animation-timing-function: ease;
   }
   .home-image4 {
     left: -35px;
     width: 312px;
     bottom: 54px;
+    animation-name: slideInLeft;
+    animation-delay: 0s;
+    animation-duration: 2s;
+    animation-direction: normal;
+    animation-iteration-count: 1;
+    animation-timing-function: ease;
   }
   .home-caption1 {
     top: 609px;
@@ -772,9 +784,9 @@
     font-weight: 200;
     line-height: 15px;
     padding-left: 0px;
-    animation-name: none;
+    animation-name: slideInRight;
     animation-delay: 0s;
-    animation-duration: 300ms;
+    animation-duration: 2s;
     animation-direction: normal;
     animation-iteration-count: 1;
     animation-timing-function: ease;
@@ -794,9 +806,7 @@
     font-weight: 200;
     line-height: 15px;
     padding-left: 0px;
-    animation-name: slideInLeft;
     animation-delay: 0s;
-    animation-duration: 2s;
     animation-direction: normal;
     animation-iteration-count: 1;
     animation-timing-function: ease;
@@ -816,9 +826,7 @@
     font-weight: 200;
     line-height: 15px;
     padding-left: 0px;
-    animation-name: slideInRight;
     animation-delay: 0s;
-    animation-duration: 2s;
     animation-direction: normal;
     animation-iteration-count: 1;
     animation-timing-function: ease;
