--- a/index.css
+++ b/index.css
@@ -124,6 +124,7 @@
   border-style: dashed;
   border-width: 0px;
   flex-direction: column;
+  padding-bottom: var(--dl-space-space-oneandhalfunits);
   justify-content: center;
 }
  
@@ -471,6 +472,9 @@
   position: relative;
   max-width: 1440px;
   align-items: flex-start;
+  padding-top: 120px;
+  padding-left: var(--dl-space-space-fiveunits);
+  padding-right: var(--dl-space-space-fiveunits);
   flex-direction: column;
   padding-bottom: var(--dl-space-space-threeunits);
 }
@@ -953,15 +957,17 @@
     overflow: hidden;
   }
   .home-caption1 {
-    top: 603px;
+    top: 599px;
     left: 50px;
-    right: 8px;
+    right: -10px;
+    position: absolute;
     font-size: 18px;
   }
   .home-caption2 {
-    top: 622px;
     left: 200px;
-    right: -30px;
+    right: -64px;
+    bottom: 500px;
+    position: absolute;
   }
   .home-caption4 {
     font-size: 15px;
@@ -975,8 +981,9 @@
     padding-bottom: 5px;
   }
   .home-video {
-    top: 111px;
-    left: 11px;
+    top: 108px;
+    left: 10px;
+    position: absolute;
   }
   .home-header5 {
     top: 15px;
@@ -1010,19 +1017,22 @@
     left: -1px;
   }
   .home-caption5 {
-    top: 443px;
+    top: 442px;
     left: 5px;
-    right: 4px;
+    right: 7px;
+    position: absolute;
   }
   .home-caption6 {
-    top: 388px;
+    top: 387px;
     left: 5px;
-    right: 4px;
+    right: 7px;
+    position: absolute;
   }
   .home-caption7 {
-    top: 338px;
+    top: 337px;
     left: 5px;
-    right: 4px;
+    right: 7px;
+    position: absolute;
   }
   .home-footer {
     width: 100%;
