--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-.home-container {
+.home-container1 {
   width: 100%;
   display: flex;
   min-height: 100vh;
@@ -80,15 +80,19 @@
  
 .home-navlink2 {
   top: 430px;
-  left: 541px;
+  left: 590px;
+  width: 267px;
+  height: 73px;
+  padding-left: var(--dl-space-space-oneandhalfunits);
+  padding-right: 21px;
   text-decoration: none;
 }
  
 .home-header2 {
-  top: 178px;
-  color: rgb(255, 255, 255);
-  right: -4px;
-  width: 100%;
+  top: 181px;
+  color: #583b1f;
+  right: -224px;
+  width: 936px;
   position: absolute;
   font-size: 90px;
   max-width: auto;
@@ -112,10 +116,18 @@
   line-height: 108px;
 }
  
+.home-text10 {
+  color: #583b1f;
+}
+ 
+.home-text12 {
+  color: #a7877a;
+}
+ 
 .home-description1 {
   gap: 120px;
   width: 100%;
-  height: 1170px;
+  height: 637px;
   display: flex;
   overflow: hidden;
   position: relative;
@@ -129,8 +141,8 @@
 }
  
 .home-image2 {
-  top: 90px;
-  left: -2px;
+  top: 88px;
+  left: -13px;
   width: 360px;
   height: 450px;
   position: absolute;
@@ -145,13 +157,13 @@
 }
  
 .home-header4 {
-  top: 194px;
+  top: 130px;
   left: var(--dl-space-space-unit);
   color: rgb(255, 255, 255);
   right: var(--dl-space-space-unit);
   width: auto;
   position: absolute;
-  font-size: 50px;
+  font-size: 80px;
   max-width: auto;
   font-style: normal;
   text-align: center;
@@ -166,6 +178,14 @@
   animation-timing-function: ease;
 }
  
+.home-text13 {
+  color: #a7877a;
+}
+ 
+.home-text15 {
+  color: #583b1f;
+}
+ 
 .home-image3 {
   right: -146px;
   width: 615px;
@@ -174,6 +194,7 @@
   overflow: hidden;
   position: absolute;
   object-fit: cover;
+  visibility: hidden;
   border-radius: 20px;
   animation-name: slideInRight;
   animation-delay: 0s;
@@ -191,6 +212,7 @@
   overflow: hidden;
   position: absolute;
   object-fit: cover;
+  visibility: hidden;
   border-radius: 20px;
   animation-name: slideInLeft;
   animation-delay: 0s;
@@ -201,67 +223,29 @@
 }
  
 .home-caption1 {
-  top: 348px;
-  left: 498px;
+  top: 310px;
+  left: 389px;
   color: rgb(87, 52, 18);
-  width: 410px;
+  width: 713px;
   height: 44px;
   display: block;
   position: absolute;
-  font-size: 25px;
+  font-size: 40px;
   max-width: 800px;
   align-self: flex-end;
   font-style: normal;
   text-align: center;
-  font-family: "Plus Jakarta Sans";
+  font-family: "Poppins";
   font-weight: 200;
   line-height: 36px;
   padding-bottom: 0px;
 }
  
 .home-caption2 {
-  top: 378px;
-  left: 638px;
+  top: 348px;
+  left: 360px;
   color: rgb(87, 52, 18);
-  width: 340px;
-  height: 44px;
-  display: block;
-  position: absolute;
-  font-size: 15px;
-  max-width: 800px;
-  align-self: flex-end;
-  font-style: normal;
-  text-align: center;
-  font-family: "Plus Jakarta Sans";
-  font-weight: 700;
-  line-height: 36px;
-  padding-bottom: 0px;
-}
- 
-.home-caption3 {
-  top: 459px;
-  left: 1176px;
-  color: rgb(87, 52, 18);
-  width: 340px;
-  height: 44px;
-  display: block;
-  position: absolute;
-  font-size: 15px;
-  max-width: 800px;
-  align-self: flex-end;
-  font-style: normal;
-  text-align: center;
-  font-family: "Plus Jakarta Sans";
-  font-weight: 700;
-  line-height: 36px;
-  padding-bottom: 0px;
-}
- 
-.home-caption4 {
-  top: 429px;
-  left: 895px;
-  color: rgb(87, 52, 18);
-  width: 529px;
+  width: 387px;
   height: 44px;
   display: block;
   position: absolute;
@@ -270,15 +254,53 @@
   align-self: flex-end;
   font-style: normal;
   text-align: center;
-  font-family: "Plus Jakarta Sans";
+  font-family: "Poppins";
+  font-weight: 700;
+  line-height: 36px;
+  padding-bottom: 0px;
+}
+ 
+.home-caption3 {
+  top: 538px;
+  left: 1227px;
+  color: rgb(87, 52, 18);
+  width: 340px;
+  height: 44px;
+  display: block;
+  position: absolute;
+  font-size: 25px;
+  max-width: 800px;
+  align-self: flex-end;
+  font-style: normal;
+  text-align: center;
+  font-family: "Poppins";
+  font-weight: 700;
+  line-height: 36px;
+  padding-bottom: 0px;
+}
+ 
+.home-caption4 {
+  top: 481px;
+  left: 619px;
+  color: rgb(87, 52, 18);
+  width: 906px;
+  height: 44px;
+  display: block;
+  position: absolute;
+  font-size: 40px;
+  max-width: auto;
+  align-self: flex-end;
+  font-style: normal;
+  text-align: center;
+  font-family: "Poppins";
   font-weight: 200;
   line-height: 36px;
   padding-bottom: 0px;
 }
  
 .home-image5 {
-  top: 84px;
-  right: -2px;
+  top: 88px;
+  right: -9px;
   width: 360px;
   height: 450px;
   position: absolute;
@@ -295,7 +317,7 @@
 .home-description2 {
   gap: 120px;
   width: 100%;
-  height: 651px;
+  height: 2006px;
   display: flex;
   overflow: hidden;
   position: relative;
@@ -308,20 +330,21 @@
 }
  
 .home-video {
-  left: 494px;
-  width: 948px;
-  bottom: 8px;
-  height: 532px;
+  top: 312px;
+  left: 222px;
+  width: 1506px;
+  height: 844px;
   position: absolute;
+  border-radius: 50px;
 }
  
 .home-header5 {
-  top: 869px;
-  left: 464px;
+  top: 137px;
+  left: 457px;
   color: rgb(167, 135, 122);
   width: 1006px;
   position: absolute;
-  font-size: 50px;
+  font-size: 90px;
   max-width: auto;
   font-style: normal;
   text-align: center;
@@ -337,14 +360,14 @@
 }
  
 .home-header6 {
-  top: 803px;
-  left: 450px;
-  color: rgb(255, 255, 255);
-  width: 1006px;
+  top: 35px;
+  left: 272px;
+  color: #583b1f;
+  width: 1375px;
   display: block;
   overflow: hidden;
   position: absolute;
-  font-size: 50px;
+  font-size: 80px;
   max-width: auto;
   font-style: normal;
   text-align: center;
@@ -359,22 +382,34 @@
   animation-timing-function: ease;
 }
  
-.home-image6 {
-  width: 200px;
-  object-fit: cover;
+.home-container2 {
+  flex: 0 0 auto;
+  width: auto;
+  height: auto;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
  
-.home-image7 {
-  width: 200px;
+.home-image6 {
+  left: 540px;
+  width: 311px;
+  bottom: 133px;
+  height: 305px;
+  position: absolute;
   object-fit: cover;
+  border-radius: 50%;
 }
  
 .home-link1 {
   display: contents;
 }
  
-.home-image8 {
-  width: 200px;
+.home-image7 {
+  left: 659px;
+  width: 75px;
+  bottom: 27px;
+  position: absolute;
   object-fit: cover;
   text-decoration: none;
 }
@@ -383,20 +418,32 @@
   display: contents;
 }
  
-.home-image9 {
-  width: 200px;
+.home-image8 {
+  left: 1193px;
+  width: 75px;
+  bottom: 27px;
+  position: absolute;
   object-fit: cover;
   text-decoration: none;
 }
  
+.home-image9 {
+  left: 1070px;
+  width: 311px;
+  bottom: 133px;
+  height: 305px;
+  position: absolute;
+  object-fit: cover;
+  border-radius: 50%;
+}
+ 
 .home-header7 {
-  top: 194px;
-  left: var(--dl-space-space-unit);
+  top: 1420px;
+  left: 640px;
   color: rgb(255, 255, 255);
-  right: var(--dl-space-space-unit);
   width: auto;
   position: absolute;
-  font-size: 50px;
+  font-size: 85px;
   max-width: auto;
   font-style: normal;
   text-align: center;
@@ -411,10 +458,18 @@
   animation-timing-function: ease;
 }
  
+.home-text18 {
+  color: #583b1f;
+}
+ 
+.home-text20 {
+  color: #a7877a;
+}
+ 
 .home-caption5 {
-  top: 348px;
-  left: 498px;
+  top: 1191px;
   color: rgb(87, 52, 18);
+  right: 176px;
   width: 410px;
   height: 44px;
   display: block;
@@ -423,33 +478,43 @@
   max-width: 800px;
   align-self: flex-end;
   text-align: center;
-  font-family: "Plus Jakarta Sans";
+  font-family: "Poppins";
   font-weight: 200;
   line-height: 36px;
   padding-bottom: 0px;
+}
+ 
+.home-text21 {
+  font-style: normal;
+  font-weight: 300;
 }
  
 .home-caption6 {
-  top: 348px;
-  left: 498px;
+  top: 1191px;
+  left: 729px;
   color: rgb(87, 52, 18);
-  width: 410px;
-  height: 44px;
+  width: 492px;
+  height: 42px;
   display: block;
   position: absolute;
   font-size: 25px;
   max-width: 800px;
   align-self: flex-end;
   text-align: center;
-  font-family: "Plus Jakarta Sans";
+  font-family: "Poppins";
   font-weight: 200;
   line-height: 36px;
   padding-bottom: 0px;
 }
  
+.home-text24 {
+  font-style: normal;
+  font-weight: 300;
+}
+ 
 .home-caption7 {
-  top: 348px;
-  left: 498px;
+  top: 1191px;
+  left: 210px;
   color: rgb(87, 52, 18);
   width: 410px;
   height: 44px;
@@ -459,18 +524,24 @@
   max-width: 800px;
   align-self: flex-end;
   text-align: center;
-  font-family: "Plus Jakarta Sans";
+  font-family: "Poppins";
   font-weight: 200;
   line-height: 36px;
   padding-bottom: 0px;
+}
+ 
+.home-text26 {
+  font-style: normal;
+  font-weight: 300;
 }
  
 .home-footer {
   gap: var(--dl-space-space-threeunits);
   width: 100%;
   display: flex;
+  overflow: hidden;
   position: relative;
-  max-width: 1440px;
+  max-width: auto;
   align-items: flex-start;
   padding-top: 120px;
   padding-left: var(--dl-space-space-fiveunits);
@@ -489,7 +560,10 @@
 }
  
 .home-logo {
+  left: 931px;
   color: rgb(87, 52, 18);
+  bottom: 42px;
+  position: absolute;
 }
  
 .home-branding {
@@ -519,7 +593,10 @@
 }
  
 .home-copyright {
+  left: 831px;
   color: rgb(167, 135, 122);
+  bottom: 13px;
+  position: absolute;
 }
  
 @media(max-width: 767px) {
@@ -535,7 +612,7 @@
   }
 }
  
-@media(max-width: 430px) {
+@media(max-width: 431px) {
   .home-header1 {
     overflow: hidden;
   }
@@ -600,6 +677,9 @@
   .home-text12 {
     color: #a7877a;
   }
+  .home-description1 {
+    height: 1170px;
+  }
   .home-image2 {
     top: 4px;
     left: -94px;
@@ -612,15 +692,13 @@
     font-family: Poppins;
   }
   .home-text13 {
-    color: #573412;
-  }
-  .home-text15 {
     color: #a7877a;
   }
   .home-image3 {
     right: -77px;
     width: 317px;
     bottom: 97px;
+    visibility: visible;
     animation-name: slideInRight;
     animation-delay: 0s;
     animation-duration: 2s;
@@ -632,6 +710,7 @@
     left: -35px;
     width: 312px;
     bottom: 54px;
+    visibility: visible;
     animation-name: slideInLeft;
     animation-delay: 0s;
     animation-duration: 2s;
@@ -741,24 +820,24 @@
     border-radius: 80%;
   }
   .home-image7 {
+    left: 110px;
+    width: 25px;
+    bottom: 40px;
+    position: absolute;
+  }
+  .home-image8 {
+    left: 290px;
+    width: 25px;
+    bottom: 40px;
+    position: absolute;
+  }
+  .home-image9 {
     left: 249px;
     width: 100px;
     bottom: 87px;
     height: 100px;
     position: absolute;
     border-radius: 80%;
-  }
-  .home-image8 {
-    left: 110px;
-    width: 25px;
-    bottom: 40px;
-    position: absolute;
-  }
-  .home-image9 {
-    left: 290px;
-    width: 25px;
-    bottom: 40px;
-    position: absolute;
   }
   .home-header7 {
     top: 480px;
@@ -770,10 +849,7 @@
     font-family: Poppins;
   }
   .home-text18 {
-    color: #573412;
-  }
-  .home-text20 {
-    color: #a7877a;
+    color: #583b1f;
   }
   .home-caption5 {
     top: 444px;
@@ -797,6 +873,10 @@
     font-style: normal;
     font-weight: 300;
   }
+  .home-text22 {
+    font-style: normal;
+    font-weight: 300;
+  }
   .home-caption6 {
     top: 389px;
     left: 25px;
@@ -813,7 +893,7 @@
     animation-iteration-count: 1;
     animation-timing-function: ease;
   }
-  .home-text23 {
+  .home-text24 {
     font-style: normal;
     font-weight: 300;
   }
@@ -833,11 +913,11 @@
     animation-iteration-count: 1;
     animation-timing-function: ease;
   }
-  .home-text25 {
+  .home-text26 {
     font-style: inherit;
     font-weight: 300;
   }
-  .home-text26 {
+  .home-text27 {
     font-style: normal;
   }
   .home-footer {
@@ -883,7 +963,7 @@
   }
 }
  
-@media(max-width: 390px) {
+@media(max-width: 391px) {
   .home-header1 {
     overflow: hidden;
   }
@@ -1001,16 +1081,16 @@
     bottom: 125px;
   }
   .home-image7 {
-    left: 230px;
-    bottom: 125px;
-  }
-  .home-image8 {
     left: 90px;
     bottom: 80px;
   }
-  .home-image9 {
+  .home-image8 {
     left: 270px;
     bottom: 80px;
+  }
+  .home-image9 {
+    left: 230px;
+    bottom: 125px;
   }
   .home-header7 {
     top: 481px;
